# templates

./: .gitignore  README.md
admin_panel/: README.md  package.json
admin_panel/admin_dashboard/: admin_dashboard.view.tsx
api_cloudflare/: README.md  api_cloudflare.task.yaml  api_cloudflare.ts  package.json
customer_insights_dashboard/: README.md  package.json
customer_insights_dashboard/customer_insights/: customer_insights.view.tsx
customer_onboarding_dashboard/: README.md  customer_onboarding.airplane.tsx  package.json
customer_onboarding_dashboard/tasks/: create_account.sql  (+13 more)
customer_relationship_management/: README.md  package.json
database_dump/: Dockerfile.airplane  database_dump.sh  database_dump.task.yaml  database_dump.ts  package.json
database_issues_alert/: README.md  database_issues_alert.task.yaml
feature_flagging_dashboard/: README.md  package.json
github_pr_dashboard/: README.md  package.json
python_selenium_example/: README.md  selenium_example.py
ruby_task/: Dockerfile.airplane  Gemfile  data.json  entrypoint.sh  entrypoint.task.yaml  example.json  task.rb
sql_ddl/: README.md  airplane.dev.yaml  package.json  pyproject.toml  update_sql_schema.airplane.ts
sql_ddl/subtasks/: diff_schemas_airplane.py
sql_ddl/tasks/: diff_schema.sh  diff_schema.task.yaml
stripe_billing_dashboard/: README.md  package.json
support_ticket_dashboard/: README.md  package.json
ticketing/: package.json
user_impersonation/: package.json
user_impersonation_tool/: README.md  package.json
views_getting_started/: README.md  package.json
(+53 files in other folders)
